# collection-example

./: cspell.json
go-impl/: .env  README.md  go.mod  go.sum  main.go
go-impl/database/: database.go
go-impl/docs/: docs.go  swagger.json  swagger.yaml
go-impl/handlers/: comic.go
go-impl/middleware/: auth.go
go-impl/models/: comic.go
go-impl/routes/: routes.go
rs-impl/: .env  Cargo.toml  docker-compose.yml
rs-impl/migrations/2022-07-29-004526_create_users/: down.sql  up.sql
rs-impl/src/: auth.rs  database.rs  main.rs  schema.rs
rs-impl/src/api/: auth.rs  comic.rs  mod.rs
rs-impl/src/models/: comic.rs  mod.rs
