[package]
name = "mc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
poem = "1.3.36"
poem-openapi = { version = "2.0.6", features = ["swagger-ui", "redoc", "chrono", "time"] }
serde = { version = "1.0.140", features = ["derive"] }
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.15"
